--- a/pixel.css
+++ b/pixel.css
@@ -1060,6 +1060,11 @@ html::-webkit-scrollbar-track {
   .right-layer {
     width: 100%;
   }
+  .Lake-Tahoe-Yosimite
+  {
+    margin-left: 100px;
+
+  }
   .AllFooter {
     height: max-content;
   }
